--- a/studentStyle.css
+++ b/studentStyle.css
@@ -1,11 +1,12 @@
 body,html{
     width:95%;
     margin: 0;
-    
+
 }
 
-#poza{    
-    
+
+#poza{
+
 background-size: cover;
    position: fixed;
    right: 0;
@@ -13,10 +14,38 @@ background-size: cover;
    left:0;
    width:100%;
    height: 100%;
-    
+
+
+}
+.logout {
+  
+  background: #5bd632;
+  background-image: -webkit-linear-gradient(top, #5bd632, #11240a);
+  background-image: -moz-linear-gradient(top, #5bd632, #11240a);
+  background-image: -ms-linear-gradient(top, #5bd632, #11240a);
+  background-image: -o-linear-gradient(top, #5bd632, #11240a);
+  background-image: linear-gradient(to bottom, #5bd632, #11240a);
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 26px;
+  padding: 9px 19px 10px 20px;
+  text-decoration: none;
 }
 
+.logout:hover {
+  background: #a3fc3c;
+  background-image: -webkit-linear-gradient(top, #a3fc3c, #263613);
+  background-image: -moz-linear-gradient(top, #a3fc3c, #263613);
+  background-image: -ms-linear-gradient(top, #a3fc3c, #263613);
+  background-image: -o-linear-gradient(top, #a3fc3c, #263613);
+  background-image: linear-gradient(to bottom, #a3fc3c, #263613);
+  text-decoration: none;
+}
 #nume{
+    display: inline-block;
     position: relative;
     left: 5%;
     margin-bottom: 7%;
@@ -39,10 +68,26 @@ background-size: cover;
     text-align:    center;
     text-shadow:   1px 1px #000000;
 }
+#back
+{
+    position: relative;
+    top:10%;
+    width: 20%;
+}
 
 #student{
     position: relative;
 }
+
+#back{
+     position: relative;
+    top:10%;
+    background-image: "BackButton.png";
+
+    font-weight: 100;
+
+}
+
 
 .cursuri a{
     position: relative;
@@ -52,7 +97,7 @@ background-size: cover;
     height:30px;
     width: 90px;
     border-style: none;
-    background-size: 100%; 
+    background-size: 100%;
     background:    linear-gradient(#1fd407, #01241b);
     border:        1px solid #000000;
     border-radius: 5px;
@@ -64,6 +109,7 @@ background-size: cover;
     text-decoration: none;
 }
 
+
 #activitate{
     display: inline-block;
     position: relative;
@@ -71,7 +117,7 @@ background-size: cover;
     margin-left: 10%;
     margin-top: 2%;
     font-size: 40px;
-    
+
 }
 
 #facebook{
@@ -79,7 +125,7 @@ background-size: cover;
     display: inline-block;
     margin-left: 10%;
     width:5%;
-    
+
 }
 
 #github{
@@ -87,8 +133,8 @@ background-size: cover;
     display: inline-block;
     margin-left: 10%;
     width: 5%;
-    
-    
+
+
 }
 
 #login{
@@ -96,14 +142,14 @@ background-size: cover;
     bottom: 15px;
     font-size: 30px;
     display: inline-block;
-    
+
 }
 #login1{
     position:relative;
     bottom: 15px;
     font-size: 30px;
     display: inline-block;
-    
+
 }
 
 #situatie{
@@ -122,9 +168,9 @@ background-size: cover;
     border-collapse: collapse;
     margin-right: 5%;
     bottom: 230px;
-    
 
-    
+
+
 }
 
 td,th{
@@ -156,17 +202,17 @@ td,th{
 
 @media screen and (min-width: 800px) and (max-width: 1580px) and (max-height:  750px)
 {
-    
+
   .cursuri a{
-    
+
     width: 6%;
 }
- 
-}  
+
+}
 @media screen and (min-width: 1005px) and (max-width: 1290px)
 {
         .cursuri a{
-    
+
             width: 15%;
         }
         #tabelas{
@@ -176,7 +222,7 @@ td,th{
             border-collapse: collapse;
             margin-right: 0%;
             bottom: 230px;
-            
+
         }
 
         td,th{
@@ -193,11 +239,11 @@ td,th{
 @media screen and (min-width: 720px) and (max-width: 1005px)
 {
         .cursuri a{
-    
+
             width: 13%;
         }
          #situatie{
-            
+
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:-150px;
@@ -206,7 +252,7 @@ td,th{
             text-align: center;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: -10%;
@@ -214,7 +260,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: -20px;
             border-collapse: collapse;
             margin-top: 70px;
@@ -227,19 +273,19 @@ td,th{
             font-size: 100%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 15%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:10%;
             margin-top: -20%;
             top:-60px;
-            
+
         }
 
         #github{
@@ -252,8 +298,8 @@ td,th{
             position:relative;
             bottom: 90px;
             font-size: 24px;
-            margin-left: 0px;   
-            margin-bottom: 60px;   
+            margin-left: 0px;
+            margin-bottom: 60px;
         }
 
 
@@ -261,9 +307,9 @@ td,th{
             position:relative;
             bottom: 140px;
             font-size: 24px;
-            margin-left:0px; 
-            margin-bottom: 60px;   
-        
+            margin-left:0px;
+            margin-bottom: 60px;
+
         }
         #activitate{
 
@@ -289,11 +335,11 @@ td,th{
 @media screen and (min-width: 580px) and (max-width: 720px)
 {
         .cursuri a{
-    
+
             width: 11%;
         }
          #situatie{
-            
+
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:0px;
@@ -302,7 +348,7 @@ td,th{
             text-align: center;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: 80%;
@@ -310,7 +356,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: 20px;
             border-collapse: collapse;
             margin-top: 40%;
@@ -323,18 +369,18 @@ td,th{
             font-size: 110%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 15%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:15%;
             margin-top: -10%;
-            
+
         }
 
         #github{
@@ -347,8 +393,8 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;   
-            top:20%;    
+            margin-left: 100px;
+            top:20%;
         }
 
 
@@ -356,9 +402,9 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 30px;
-            margin-left: 0px;   
-            top:20%; 
-            margin-top: 15%;   
+            margin-left: 0px;
+            top:20%;
+            margin-top: 15%;
         }
         #activitate{
             display: inline-block;
@@ -382,11 +428,11 @@ td,th{
 @media screen and (min-width: 505px) and (max-width: 580px)
 {
         .cursuri a{
-    
+
             width: 10%;
         }{
 
-            #situatie            
+            #situatie
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:0px;
@@ -395,7 +441,7 @@ td,th{
             text-align: center;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: 80%;
@@ -403,7 +449,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: 20px;
             border-collapse: collapse;
             margin-top: 40%;
@@ -416,18 +462,18 @@ td,th{
             font-size: 110%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 15%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:15%;
             margin-top: -10%;
-            
+
         }
 
         #github{
@@ -440,8 +486,8 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;   
-            top:20%;    
+            margin-left: 100px;
+            top:20%;
         }
 
 
@@ -449,9 +495,9 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 30px;
-            margin-left: 0px;   
-            top:20%; 
-            margin-top: 15%;   
+            margin-left: 0px;
+            top:20%;
+            margin-top: 15%;
         }
         #activitate{
             display: inline-block;
@@ -477,12 +523,12 @@ td,th{
 @media screen and (min-width: 380px) and (max-width: 505px)
 {
         .cursuri a{
-    
+
             width: 30%;
             margin-left: 7%;
         }
         #situatie{
-            
+
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:0px;
@@ -491,7 +537,7 @@ td,th{
             text-align: center;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: 110%;
@@ -499,7 +545,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: 20px;
             border-collapse: collapse;
             margin-top: 60%;
@@ -512,18 +558,18 @@ td,th{
             font-size: 80%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 15%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:15%;
             margin-top: -10%;
-            
+
         }
 
         #github{
@@ -536,8 +582,8 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;   
-            top:20%;    
+            margin-left: 100px;
+            top:20%;
         }
 
 
@@ -545,9 +591,9 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 30px;
-            margin-left: 0px;   
-            top:20%; 
-            margin-top: 15%;   
+            margin-left: 0px;
+            top:20%;
+            margin-top: 15%;
         }
         #activitate{
             display: inline-block;
@@ -571,12 +617,12 @@ td,th{
 @media screen and (min-width: 326px) and (max-width: 380px)
 {
         .cursuri a{
-    
+
             width: 29%;
-            margin-left:6% ; 
+            margin-left:6% ;
         }
          #situatie{
-            
+
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:0px;
@@ -585,7 +631,7 @@ td,th{
             text-align: center;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: 110%;
@@ -593,7 +639,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: 20px;
             border-collapse: collapse;
             margin-top: 60%;
@@ -606,18 +652,18 @@ td,th{
             font-size: 80%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 7%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:15%;
             margin-top: -10%;
-            
+
         }
 
         #github{
@@ -629,13 +675,13 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;       
+            margin-left: 100px;
         }
          #login1{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;       
+            margin-left: 100px;
         }
 
         #activitate{
@@ -660,12 +706,12 @@ td,th{
 @media screen and (min-width: 200px) and (max-width: 326px)
 {
         .cursuri a{
-    
+
             width: 27%;
-            margin-left:6% ; 
+            margin-left:6% ;
         }
         #situatie{
-            
+
             display: inline-block;
             font-family: 'Denk One', sans-serif;
             top:0px;
@@ -673,7 +719,7 @@ td,th{
             font-size: 40px;
         }
         #total{
-  
+
             font-family: 'Denk One', sans-serif;
             display: inline-block;
             margin-right: 120%;
@@ -681,7 +727,7 @@ td,th{
         }
 
         #tabelas{
-            display: inline-block;       
+            display: inline-block;
             left: 20px;
             border-collapse: collapse;
             margin-top: 80%;
@@ -694,14 +740,14 @@ td,th{
             font-size: 80%;
         }
         #nume{
-            
+
             left: 5%;
             margin-bottom: 7%;
             padding-top: 5%;
             font-family: 'Stalinist One', cursive;
             font-size: 200%;
         }
-        
+
         #facebook{
             width:15%;
             margin-top:-6%;
@@ -716,13 +762,13 @@ td,th{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;       
+            margin-left: 100px;
         }
          #login{
             position:relative;
             bottom: 40px;
             font-size: 24px;
-            margin-left: 100px;       
+            margin-left: 100px;
         }
 
         #activitate{
@@ -742,25 +788,11 @@ td,th{
         }
 
 
-
-
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#back
+{
+    position: relative;
+    top:20%;
+}
