--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 .margin-logIn input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -349,7 +346,10 @@ margin-top: 5%
 
 }
 
-
+#algoritm div
+{
+    
+}
 
 #algoritm #algoritm-titlu
 {
@@ -477,37 +477,5 @@ margin-top: 5%
     display:none;
 }
 
-@media screen and (max-width: 376px){
-    .meniu{
-        display: none;
-    }
-    #PC{
-        display: none;
-    }
-   
-    #resp{
-        overflow: hidden;
-        display:block;
-        height:60px;
-        width: 100%;
-        background: #fcda9c;
-        position: fixed;
-        top:0%;
-        border-top: 0px;
-        border-left: 0px;
-        border-right: 0px;
-        border-style:solid;
-        margin:0;
-    }
-    .menu__button{
-    
-        display: inline-block;
-        border-radius: 5px;
-        background: none;
-        margin-left: 5%;
-        
-       
-    }
-    
 
-}
+
